# agent-skills-collection

./: .gitignore  .gitleaksignore  README.md  SECURITY.md  catalog-baseline.json  catalog.json  profiles.json  pyproject.toml
.github/workflows/: catalog.yml
authentication/auth0/acul-screen-generator/: SKILL.md
authentication/auth0/auth0-android/: SKILL.md
authentication/auth0/auth0-android-major-migration/: SKILL.md
authentication/auth0/auth0-angular/: SKILL.md
authentication/auth0/auth0-aspnetcore-api/: SKILL.md
authentication/auth0/auth0-aspnetcore-authentication/: SKILL.md
authentication/auth0/auth0-branding/: SKILL.md
authentication/auth0/auth0-cli/: SKILL.md
authentication/auth0/auth0-custom-domains/: SKILL.md
authentication/auth0/auth0-dpop/: SKILL.md
authentication/auth0/auth0-expo/: SKILL.md
authentication/auth0/auth0-fastapi-api/: SKILL.md
authentication/auth0/auth0-fastify/: SKILL.md
authentication/auth0/auth0-fastify-api/: SKILL.md
authentication/auth0/auth0-flask/: SKILL.md
authentication/auth0/auth0-flutter-native/: SKILL.md
authentication/auth0/auth0-flutter-web/: SKILL.md
authentication/auth0/auth0-ionic-angular/: SKILL.md
authentication/auth0/auth0-ionic-react/: SKILL.md
authentication/auth0/auth0-ionic-vue/: SKILL.md
authentication/auth0/auth0-java-mvc-common/: SKILL.md
authentication/auth0/auth0-laravel/: SKILL.md
authentication/auth0/auth0-laravel-api/: SKILL.md
authentication/auth0/auth0-maui/: SKILL.md
authentication/auth0/auth0-mfa/: SKILL.md
authentication/auth0/auth0-migration/: SKILL.md
authentication/auth0/auth0-net-android/: SKILL.md
authentication/auth0/auth0-net-ios/: SKILL.md
authentication/auth0/auth0-nuxt/: SKILL.md
authentication/auth0/auth0-php/: SKILL.md
authentication/auth0/auth0-php-api/: SKILL.md
authentication/auth0/auth0-quickstart/: SKILL.md
authentication/auth0/auth0-react/: SKILL.md
authentication/auth0/auth0-react-native/: SKILL.md
authentication/auth0/auth0-spa-js/: SKILL.md
authentication/auth0/auth0-swift/: SKILL.md
authentication/auth0/auth0-swift-major-migration/: SKILL.md
authentication/auth0/auth0-vue/: SKILL.md
authentication/auth0/auth0-winforms/: SKILL.md
authentication/auth0/auth0-wpf/: SKILL.md
authentication/auth0/express-oauth2-jwt-bearer/: SKILL.md
authentication/auth0/go-jwt-middleware/: SKILL.md
best-ui-ux/: README.md
databases/drizzle/drizzle-queries/: SKILL.md
design-ui-and-templates/: OPEN-DESIGN-MANIFEST.md
design-ui-and-templates/d3-visualization/: README.md  SKILL.md
design-ui-and-templates/full-page-screenshot/: README.md
design-ui-and-templates/hand-drawn-diagrams/: .gitattributes
design-ui-and-templates/nanobanana-ppt/: API_MANAGEMENT.md
marketing-and-advertising/unslop/unslop/: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
src/skill_catalog/: __init__.py  cli.py  core.py
tests/: test_catalog.py
(+447 files in other folders)
